[backend] create test for code coverage
